# eventdrop

./: .drone.yml  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-compose.yml.dev  docker-compose.yml.example  docker-compose.yml.mysql  pyproject.toml
alembic/: env.py
alembic/versions/: 6e51bae1b462_add_upload_message_and_message_is_.py  a1c3e5f7b9d2_add_password_change_required_to_users.py  b1546baf39b1_add_gps_columns_to_media_files.py  c2d4f6a8b0e1_add_archive_status_and_async_fields.py  d4f6h8a2c0e3_add_batch_fields_to_archive_requests.py  e055b7d806c7_add_app_settings_and_password_reset_.py  e5g7i9c3d1f4_add_phase_to_archive_requests.py  f6h8j0d4e2g5_rename_is_active_to_uploads_enabled.py
src/eventdrop/: config.py  logging_config.py  main.py  templating.py
src/eventdrop/auth/: dependencies.py  oidc.py  passwords.py  routes.py
src/eventdrop/database/: engine.py  models.py  session.py
src/eventdrop/i18n/: de.json  en.json  es.json  fr.json  it.json
src/eventdrop/routes/: account.py  admin.py  api.py  downloads.py  events.py  gallery.py  lang.py  upload.py
src/eventdrop/services/: archive_service.py  email_ingestion.py  email_service.py  event_service.py  i18n_service.py  media_service.py  settings_service.py  user_service.py
src/eventdrop/storage/: __init__.py  base.py  local.py  s3.py
src/eventdrop/templates/: base.html  index.html
src/eventdrop/utils/: client_ip.py  context.py  (+1 more)
tests/: conftest.py  test_auth.py  test_email_ingestion.py  test_events.py  test_gallery.py  test_logging.py  test_storage.py  test_upload.py
(+25 files in other folders)
