[project]
name = "eventdrop"
version = "0.1.0"
description = "Event media upload web application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "aiomysql>=0.2.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "authlib>=1.3.2",
    "httpx>=0.28.0",
    "qrcode[pil]>=8.0",
    "pillow>=11.0.0",
    "python-magic>=0.4.27",
    "boto3>=1.35.0",
    "exifread>=3.0.0",
    "aioimaplib>=2.0.0",
    "cryptography>=43.0.0",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eventdrop"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
